# tronclass_rollcall

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  config.toml.example  readme.md
config/: accounts.toml.example  config.toml.example
src/: account.rs  config.rs  db.rs  main.rs  monitor.rs
src/adapters/: discord.rs  events.rs  mod.rs  requests.rs  scanner.rs
src/adapters/line/: client.rs  mod.rs  scanner.html  types.rs  webhook.rs
src/api/: mod.rs  profile.rs  rollcall.rs
src/auth/: mod.rs
src/auth/providers/: fju.rs  mod.rs
src/line_bot/: mod.rs  types.rs
src/rollcall/: mod.rs
src/rollcalls/: mod.rs  number.rs  qrcode.rs  radar.rs
