[package]
name = "tronclass_rollcall"
version = "0.1.1"
edition = "2021"
description = "Tronclass Rollcall - Automated attendance system for Tronclass"
authors = []

[[bin]]
name = "tronclass_rollcall"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"], default-features = false }

# Web server (Line Bot webhook)
axum = { version = "0.8.8", features = ["json"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0.18"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
config = { version = "0.15.22", features = ["toml"] }

# Crypto (HMAC-SHA256 for Line Bot signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# URL parsing
url = "2"

# Regex
regex = "1"

# OCR（驗證碼識別）
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Discord Bot adapter
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend", "utils"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Once cell
once_cell = "1"
rand = "0.10.0"

# Database (SQLite)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
